[chore]: Ignore build and test artifacts in .gitignore
This change adds a set of commonly ignored files for Python projects, including build artifacts, test cache, and IDE directories. The purpose is to keep the repository clean and prevent unnecessary files from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@ ENV/
 # Virtual environment (project-specific)
 venv/
 
+# Python build artifacts
+build/
+dist/
+*.egg-info/
+.pytest_cache/
+__pycache__/
+
 # IDE
 .vscode/
 .idea/
